src/styles/text.styl
h1, h2, h3, h4, h5, h6
  font-family 'Helvetica Neue', Helvetica, sans-serif

body
  color $black
  font-family Helvetica, sans-serif

code
  color $white
  background-color $black
  padding 1px 5px
  border-radius 3px
  white-space nowrap

pre code
  display block
  overflow auto
  padding 15px 5px

.lead
  font-size 22px
  font-weight 200

.styled
  font-weight 400

